--- a/UserManager.Api/Views/User/GoogleResponse.cshtml
+++ b/UserManager.Api/Views/User/GoogleResponse.cshtml
@@ -3,7 +3,7 @@
 <h1 class="bg-info text-white">Your Login Details</h1>
 
 <table class="table table-sm table-bordered">
-    <tr><th>Name</th><th>Email</th><th>Sid</th></tr>
+    <tr><th>Name</th><th>Email</th><th>picture</th></tr>
     <tr>
         @foreach (string info in Model)
         {
